Se actualizo inventario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.application.name=inventario
+# Configuración para MongoDB Atlas
+spring.data.mongodb.uri=mongodb+srv://eltornillofelizdev:NSXCkXoVO4wE8lQb@cluster0.xllegs.mongodb.net/ferreteria_db?retryWrites=true&w=majority&appName=Cluster0
